--- a/classMath_1_1Range.html
+++ b/classMath_1_1Range.html
@@ -220,7 +220,8 @@ template&lt;typename DataType &gt; </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classMath_1_1Range_a335ccf8673dfbf4eaff1f4e627548232_icgraph.svg" width="388" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classMath_1_1Range_a335ccf8673dfbf4eaff1f4e627548232_icgraph.svg" width="388" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -257,7 +258,8 @@ template&lt;typename DataType &gt; </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classMath_1_1Range_a40cb7ddd1ba3fc857b9179c63bdce99e_icgraph.svg" width="383" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classMath_1_1Range_a40cb7ddd1ba3fc857b9179c63bdce99e_icgraph.svg" width="383" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
