--- a/classVehicleControl_1_1Bluetooth_1_1Base.html
+++ b/classVehicleControl_1_1Bluetooth_1_1Base.html
@@ -99,7 +99,8 @@ $(document).ready(function(){initNavTree('classVehicleControl_1_1Bluetooth_1_1Ba
 <div class="dynheader">
 Inheritance diagram for VehicleControl::Bluetooth::Base:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base__inherit__graph.svg" width="379" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base__inherit__graph.svg" width="379" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="pub-methods"></a>
@@ -260,7 +261,8 @@ Protected Attributes</h2></td></tr>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_ab395ffe7b3b7a1a76007224588969bd2_icgraph.svg" width="1092" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_ab395ffe7b3b7a1a76007224588969bd2_icgraph.svg" width="1092" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -302,12 +304,14 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_aa84d403a6275189ad0f96afb8dd57e31_cgraph.svg" width="432" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_aa84d403a6275189ad0f96afb8dd57e31_cgraph.svg" width="432" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_aa84d403a6275189ad0f96afb8dd57e31_icgraph.svg" width="842" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_aa84d403a6275189ad0f96afb8dd57e31_icgraph.svg" width="842" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -342,7 +346,8 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_aa491a785ca4b2feee3bc3d8ea876c59e_icgraph.svg" width="403" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_aa491a785ca4b2feee3bc3d8ea876c59e_icgraph.svg" width="403" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -377,12 +382,14 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a6c41447b1283d1b90459cbdae3a54480_cgraph.svg" width="894" height="191"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a6c41447b1283d1b90459cbdae3a54480_cgraph.svg" width="894" height="191"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a6c41447b1283d1b90459cbdae3a54480_icgraph.svg" width="403" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a6c41447b1283d1b90459cbdae3a54480_icgraph.svg" width="403" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -417,12 +424,14 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a0d454a071fb0e38cf668cb82d5f93a3c_cgraph.svg" width="674" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a0d454a071fb0e38cf668cb82d5f93a3c_cgraph.svg" width="674" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a0d454a071fb0e38cf668cb82d5f93a3c_icgraph.svg" width="622" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a0d454a071fb0e38cf668cb82d5f93a3c_icgraph.svg" width="622" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -457,12 +466,14 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a73cb44dceb3bf46a3fb2acce2091be2a_cgraph.svg" width="424" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a73cb44dceb3bf46a3fb2acce2091be2a_cgraph.svg" width="424" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a73cb44dceb3bf46a3fb2acce2091be2a_icgraph.svg" width="622" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a73cb44dceb3bf46a3fb2acce2091be2a_icgraph.svg" width="622" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -504,7 +515,8 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a8630ce75edbbb0e64227ffc5e3249c62_icgraph.svg" width="842" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Base_a8630ce75edbbb0e64227ffc5e3249c62_icgraph.svg" width="842" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
