--- a/classVehicleControl_1_1Bluetooth_1_1Client.html
+++ b/classVehicleControl_1_1Bluetooth_1_1Client.html
@@ -96,12 +96,14 @@ $(document).ready(function(){initNavTree('classVehicleControl_1_1Bluetooth_1_1Cl
 <div class="dynheader">
 Inheritance diagram for VehicleControl::Bluetooth::Client:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Client__inherit__graph.svg" width="183" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Client__inherit__graph.svg" width="183" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
 <div class="dynheader">
 Collaboration diagram for VehicleControl::Bluetooth::Client:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Client__coll__graph.svg" width="183" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Client__coll__graph.svg" width="183" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="pub-methods"></a>
@@ -187,7 +189,8 @@ Additional Inherited Members</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Client_a0391040c6047198f5115f47bce8f1e49_cgraph.svg" width="424" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Client_a0391040c6047198f5115f47bce8f1e49_cgraph.svg" width="424" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -231,7 +234,8 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Client_a83777b221312c408d42d8dfcb0b807b8_cgraph.svg" width="1114" height="191"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Client_a83777b221312c408d42d8dfcb0b807b8_cgraph.svg" width="1114" height="191"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
