--- a/classVehicleControl_1_1IO_1_1MotorControl.html
+++ b/classVehicleControl_1_1IO_1_1MotorControl.html
@@ -97,7 +97,8 @@ $(document).ready(function(){initNavTree('classVehicleControl_1_1IO_1_1MotorCont
 <div class="dynheader">
 Inheritance diagram for VehicleControl::IO::MotorControl:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl__inherit__graph.svg" width="140" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl__inherit__graph.svg" width="140" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="nested-classes"></a>
@@ -195,7 +196,8 @@ Public Member Functions</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_a14db742c3916175519c5d543990fea84_cgraph.svg" width="443" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_a14db742c3916175519c5d543990fea84_cgraph.svg" width="443" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -285,7 +287,8 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_afde0146703bc6472e34b93c9115e8dfe_cgraph.svg" width="410" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_afde0146703bc6472e34b93c9115e8dfe_cgraph.svg" width="410" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -312,7 +315,8 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_ac9ec3e369840c53a3e3e6caebb0ed151_icgraph.svg" width="424" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_ac9ec3e369840c53a3e3e6caebb0ed151_icgraph.svg" width="424" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -361,7 +365,8 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_aa3d0162e477010fd1d60e53d76b69a5c_icgraph.svg" width="439" height="259"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_aa3d0162e477010fd1d60e53d76b69a5c_icgraph.svg" width="439" height="259"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -483,7 +488,8 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_a0f8d19d6f6ddfda7b905c7bdcd03f27f_cgraph.svg" width="450" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_a0f8d19d6f6ddfda7b905c7bdcd03f27f_cgraph.svg" width="450" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -527,7 +533,8 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_a9e919c4817fcab2b1519a30418857c22_cgraph.svg" width="450" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_a9e919c4817fcab2b1519a30418857c22_cgraph.svg" width="450" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -560,7 +567,8 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_a25f16811082428a2eeda1c78f3a9773a_cgraph.svg" width="424" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_a25f16811082428a2eeda1c78f3a9773a_cgraph.svg" width="424" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -594,7 +602,8 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_acbd458d9cb594ef6851dda1e67521d1b_icgraph.svg" width="456" height="207"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_acbd458d9cb594ef6851dda1e67521d1b_icgraph.svg" width="456" height="207"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -646,7 +655,8 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_acc47708aa71a6501afc203a737847488_cgraph.svg" width="456" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1MotorControl_acc47708aa71a6501afc203a737847488_cgraph.svg" width="456" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
