--- a/classVehicleControl_1_1IO_1_1ServoControl.html
+++ b/classVehicleControl_1_1IO_1_1ServoControl.html
@@ -97,12 +97,14 @@ $(document).ready(function(){initNavTree('classVehicleControl_1_1IO_1_1ServoCont
 <div class="dynheader">
 Inheritance diagram for VehicleControl::IO::ServoControl:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1ServoControl__inherit__graph.svg" width="140" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1ServoControl__inherit__graph.svg" width="140" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
 <div class="dynheader">
 Collaboration diagram for VehicleControl::IO::ServoControl:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1ServoControl__coll__graph.svg" width="140" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1ServoControl__coll__graph.svg" width="140" height="147"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="pub-types"></a>
@@ -290,7 +292,8 @@ Public Member Functions</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1ServoControl_ad147f1a35161984fe4a9bb5d062f0aaa_cgraph.svg" width="439" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1ServoControl_ad147f1a35161984fe4a9bb5d062f0aaa_cgraph.svg" width="439" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -333,7 +336,8 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1ServoControl_a27a9e1d9ec14e6ff1b7c27c2cdbdfd2f_cgraph.svg" width="435" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1ServoControl_a27a9e1d9ec14e6ff1b7c27c2cdbdfd2f_cgraph.svg" width="435" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -387,7 +391,8 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1ServoControl_aebac8ebb230bc873cccac799594d330f_cgraph.svg" width="435" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1IO_1_1ServoControl_aebac8ebb230bc873cccac799594d330f_cgraph.svg" width="435" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
