--- a/classVehicleControl_1_1ManagerPRUs.html
+++ b/classVehicleControl_1_1ManagerPRUs.html
@@ -176,7 +176,8 @@ Static Public Member Functions</h2></td></tr>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1ManagerPRUs_ad6c79e6ea84f08582f9ef743e604fd6b_icgraph.svg" width="312" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1ManagerPRUs_ad6c79e6ea84f08582f9ef743e604fd6b_icgraph.svg" width="312" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
