--- a/structVehicleControl_1_1IO_1_1Input_1_1Setup.html
+++ b/structVehicleControl_1_1IO_1_1Input_1_1Setup.html
@@ -143,7 +143,8 @@ Public Attributes</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="structVehicleControl_1_1IO_1_1Input_1_1Setup_a09ce07a96559b6f63eaa51d8eccbc877_cgraph.svg" width="1080" height="675"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="structVehicleControl_1_1IO_1_1Input_1_1Setup_a09ce07a96559b6f63eaa51d8eccbc877_cgraph.svg" width="1080" height="675"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
