--- a/structVehicleControl_1_1IO_1_1UserLED_1_1Setup.html
+++ b/structVehicleControl_1_1IO_1_1UserLED_1_1Setup.html
@@ -142,7 +142,8 @@ Public Attributes</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="structVehicleControl_1_1IO_1_1UserLED_1_1Setup_a0f7dc4714f6c82868c4d3bad8baaf4c6_cgraph.svg" width="847" height="303"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="structVehicleControl_1_1IO_1_1UserLED_1_1Setup_a0f7dc4714f6c82868c4d3bad8baaf4c6_cgraph.svg" width="847" height="303"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
